| Summary: | ASTERISK-26164: XMPP no longer triggers NOTIFY to device via chan_pjsip | ||
| Reporter: | Ross Beer (rossbeer) | Labels: | |
| Date Opened: | 2016-06-30 04:24:50 | Date Closed: | 2016-09-30 08:55:30 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_pubsub Resources/res_xmpp |
| Versions: | 13.9.1 13.10.0-rc1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Fedora 23 / CentOS 7 | Attachments: | |
| Description: | Shared device state via XMPP is no longer sent to devices subscribed via hints. Updates are being received via XMPP and devices are subscribed when showing hints:
{noformat} 200@from-inter: PJSIP/200 State:Idle Presence:not_set Watchers 8 {noformat} XMPP message from other server: {noformat} <--- XMPP received from 'asterisk' ---> <message from="pubsub.presence.domainremoved" to="ast01@presence.domainremoved" id="lQ84VH45"> <event xmlns="http://jabber.org/protocol/pubsub#event"> <items node="device_state"> <item id="PJSIP/200"> <state xmlns="http://asterisk.org" eid="00:00:00:00:00:00" cachable="1">INUSE</state> </item> </items> </event> <headers xmlns="http://jabber.org/protocol/shim"> <header name="SubID">HpKmSGOrrW6G0x72HUUHBwdDeVKm8Pr66M1LuhDo</header> </headers> </message> {noformat} In previous versions of asterisk there was a subscribecontext for the chan_sip driver which is no longer present for chan_pjsip. I'm wondering if XMPP is updating a different context to that of the devices subscription. The NOTIFY packets are sent correctly if the devices are using the same server. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-06-30 04:24:50.693-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Joshua C. Colp (jcolp) 2016-06-30 07:54:45.483-0500 XMPP updates the device state, not extension state, so it would not matter what context is subscribed to. I'd suggest also adding the console output with debug to show this issue. By: Asterisk Team (asteriskteam) 2016-07-14 12:00:01.151-0500 Suspended due to lack of activity. This issue will be automatically re-opened if the reporter posts a comment. If you are not the reporter and would like this re-opened please create a new issue instead. If the new issue is related to this one a link will be created during the triage process. Further information on issue tracker usage can be found in the Asterisk Issue Guidlines [1]. [1] https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines By: Ross Beer (rossbeer) 2016-08-09 04:39:16.440-0500 What information do you require from the CLI? I can see that updates are coming in as follows: {noformat} <--- XMPP received from 'asterisk' ---> <?xml version="1.0" encoding="UTF-8"?> <message from="pubsub.domainremoved" to="ast01@presence.domainremoved" id="54F4D839"> <event xmlns="http://jabber.org/protocol/pubsub#event"> <items node="device_state"> <item id="PJSIP/200"> <state xmlns="http://asterisk.org" eid="00:00:00:00:00:00" cachable="1">INUSE</state> </item> </items> </event> <headers xmlns="http://jabber.org/protocol/shim"> <header name="SubID">mp0PzNJ6CD8R3q8G08PBgz5ubzlB0I927VhU9rNf</header> </headers> </message> <-------------> {noformat} By: Asterisk Team (asteriskteam) 2016-08-09 04:39:16.880-0500 This issue has been reopened as a result of your commenting on it as the reporter. It will be triaged once again as applicable. By: Matt Jordan (mjordan) 2016-08-10 08:33:05.573-0500 I think a full DEBUG log, along with your {{pjsip.conf}} and {{xmpp.conf}} would be helpful. Instructions for collecting debug information can be found on the wiki: https://wiki.asterisk.org/wiki/display/AST/Collecting+Debug+Information By: Ross Beer (rossbeer) 2016-08-11 06:03:40.543-0500 The reason this fails is that there was no entity id set as Fedora 23 changes the name of interfaces. A patch is up for review to resolve this issue. | ||